imperative-tests/tests/variable_checks/missing_field.stderr
error: Opcode contains w which is neither a valid digit nor a variable name.
 --> $DIR/missing_field.rs:5:16
  |
5 |     #[opcode = "0xfvwf"]
  |                ^^^^^^^^
